--- a/DESAFIOS/d012/style.css
+++ b/DESAFIOS/d012/style.css
@@ -1,68 +1,65 @@
 @charset "UTF-8";
 
 *{
-    margin: 0;
+    margin: 0%;
     padding: 0%;
-
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
+html, body {
+    min-height: 100vh;
+    background-color: darkgray;
 }
 
-header{
-    width: 100%;
-    height: 250px;
-    background-color: rgb(0, 0, 0);
-}
-
-h1{
-    font-size: 6em;
+header {
+    background-color: black;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    justify-content: center;
+}
+
+header > h1 {
     padding-top: 50px;
+    font-variant: small-caps;
 }
 
-p.creditos{
-    padding-top: 20px;
-    text-align: center;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-   
+header > p {
+    padding-bottom: 50px;
 }
 
-p > a {
+a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
-    font-size: large;
 }
 
-/*PARTE 1 DO CORDEL*/
-
-.cordel-universal{
-    font-size: 2em;
+a:hover {
+    text-decoration: underline;
 }
 
-main > section.cordel-universal{
-    margin: 40px 0px 100px 0px;
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
 }
 
-main > section > p.verso-universal{
-    padding: 10px 10px 10px 10px;
-    margin-left: 20px;
-    padding-left: 15px;
-    line-height: 80px;
+section.normal {
+    background-color:white ;
+    color: rgb(0, 0, 0);
 }
 
-/*PARTE 2 DO CORDEL*/
+section.imagem {
+    background-color: rgba(49, 46, 46, 0.603);
+    color: rgb(255, 255, 255);
+}
 
-section.fundo1{
-    background-image: url(images/background001.jpg);
-    background-attachment: scroll;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 700px;
+section.imagem > p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.326);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding:10px ;
 }
